# JavaProjects

./: .gitignore
AdventOfCode/: day1.py  day2.py  input.txt
AdventOfCode2024/: .gitignore
Calculator/: Makefile  parser.cpp  parser.h
CarTextResponder/: .project
ClearentKatas/: getData.html  index.html  listMerchants.html  main.js  newData.json  notes.txt  postData.html  style.css
CodejamTest/: main.py
Collatz/: Collatz.cs  Makefile  README.md  hashMap.c  hashMap.h  hashMapTest.c  hashSet.c  hashSet.h  main.c  main.go  mainSeq.go  mainThread.c  sanity.c  syncQueue.c
DatabaseOverlay/: Cargo.toml
Euler1/: main.c  main.rb
Euler102/: README  main.py
Euler11/: main.py
Euler12/: build.xml
Euler13/: main.py
Euler14/: main.php  main.py
Euler15/: Cargo.toml
Euler152/: euler152.hs
Euler18/: Makefile  main.cs  pyramid.cs
Euler19/: main.py
Euler2/: .project  main.rb  main.rkt  speedtest.c
Euler2.2/: .project
Euler20/: .project
Euler21/: build.xml
Euler22/: Makefile  build.xml  main.c  main.rkt  mainConcurrent.rkt  test.py
Euler23/: main.py  output.txt
Euler24/: .project
Euler26/: WillsLib.py  main.py
Euler27/: Euler27.java  Makefile  Primes.java  (+1 more)
billion_row_challenge/: .gitignore  Cargo.toml  small_measurements.txt
billion_row_challenge/benches/: all_benches.rs  float.rs
billion_row_challenge/sqlite/: createDatabase.sh  inserter.awk
billion_row_challenge/src/: lib.rs  main.rs
hangman/: Cargo.toml
hangman/benches/: dictionary_strategy.rs
hangman/src/: lib.rs  main.rs
riddlerExpress2022-01-28/app/: Cargo.toml  averager.py
riddlerExpress2022-01-28/app/benches/: benchmark.rs
riddlerExpress2022-01-28/app/src/: lib.rs  main.rs
(+464 files in other folders)
