[package]
name = "billion_row_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
rayon = "1.8.0"

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.9.0"

[[bench]]
name = "float"
harness = false


[profile.release]
debug = true
