[package]
name = "billion_row_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
rayon = "1.8.0"
memchr = "2.7.1"
memmap = "0.7.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "all_benches"
harness = false


[profile.release]
debug = true
