[package]
name = "hangman"
version = "0.1.0"
authors = ["Will Koster <jameswk2@illinois.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.7.3"
counter="0.4.3"
rayon="1.3.0"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "dictionary_strategy"
harness = false
