[package]
name = "app"
version = "0.1.0"
authors = ["Will Koster <jameswk2@illinois.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.2"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false

